logs/iq_gnc/build.make.001.log.stderr
/home/sjchang/catkin_ws/src/iq_gnc/src/square.cpp: In function ‘int main(int, char**)’:
/home/sjchang/catkin_ws/src/iq_gnc/src/square.cpp:68:122: error: expected ‘;’ before ‘counter’
   68 |     set_destination(waypointList[counter].x, waypointList[counter].y, waypointList[counter].z, waypointList[counter].psi)
      |                                                                                                                          ^
      |                                                                                                                          ;
   69 |     counter++;
      |     ~~~~~~~                                                                                                               
make[2]: *** [CMakeFiles/square.dir/build.make:63: CMakeFiles/square.dir/src/square.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:215: CMakeFiles/square.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
